# NanokaLeaks

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
.github/workflows/: release.yml
nanoka_viewer/: UI.py  api.py  main.py
nanoka_viewer/api/: __init__.py  characters.py  constants.py  manifest.py  models.py
nanoka_viewer/ui/: __init__.py  card.py  image_loader.py  loader.py  main_window.py  section.py  styles.py
