[project]
name = "nanokaleaks"
version = "3.0.0"
description = "View newest characters from nanoka.cc"
requires-python = ">=3.11"
dependencies = [
    "customtkinter",
    "requests",
    "pillow",
    "pyside6>=6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanoka_viewer"]

[dependency-groups]
dev = [
    "nuitka[onefile]>=4.0.7",
]
